[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pwn"
version = "1.0.0"
authors = ["Seokjin Han <seokjin.han@standigm.com>"]
maintainers = ["Standigm Inc. <bioplatform@standigm.com>"]
description = "Prioritization with a Warped Network"
keywords = ["Disease-target identification", "Protein-protein interaction", "Random walk", "Machine learning"]
repository = "https://github.com/Standigm/PWN"
readme = "README.md"
license = "BSD-3-Clause-Clear"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
packages = [
    {include = "pwn"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
scikit-learn = {version = "^1.1.2", optional = true}
pandas = {version = "^1.5.0", optional = true}
tqdm = {version = "^4.64.1", optional = true}
networkx = {version = "^2.8.6", optional = true}
matplotlib = {version = "^3.6.0", optional = true}
requests = {version = "^2.28.1", optional = true}

[tool.poetry.extras]
data = ["pandas", "tqdm", "requests", "networkx", "matplotlib"]
experiment = ["scikit-learn", "pandas", "tqdm"]

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
black = "^22.8.0"
[tool.black]
line-length = 119
skip-string-normalization = true
target-version = ["py39"]
[tool.isort]
profile = "black"
line_length = 119
